--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  font-size: 18px;
 }
 
 h1,
@@ -20,6 +21,10 @@ h5,
 h6,
 p {
   margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 ul {
@@ -39,4 +44,7 @@ a {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
+  background-color: transparent;
+  border: none;
+  text-transform: lowercase;
 }
