--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,342 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  color: var(--color-text, #F1B2CE);
+  background-color: var(--color-bg, #000028);
+  font-family: var(--main-font, sans-serif);
+  line-height: 130%;
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.header {
+  block-size: 100vh;
+  min-block-size: clamp(41.75rem, 91.049vw + 20.354rem, 64rem);
+}
+
+.decorated-zone {
+  position: relative;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  margin: clamp(0.625rem, 2.551vw + 0.026rem, 1.25rem);
+  min-block-size: clamp(40.5rem, 85.496vw + 20.462rem, 61.5rem);
+}
+
+.decorated-zone::before {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  block-size: 25px;
+  inline-size: 25px;
+  top: 0;
+  right: 0;
+  border-top: 1px solid var(--color-theme-menu, #FF0070);
+  border-right: 1px solid var(--color-theme-menu, #FF0070);
+}
+
+.decorated-zone::after {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  block-size: 25px;
+  inline-size: 25px;
+  bottom: 0;
+  left: 0;
+  border-bottom: 1px solid var(--color-theme-menu, #FF0070);
+  border-left: 1px solid var(--color-theme-menu, #FF0070);
+}
+
+.decor-rec {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 29px;
+  text-transform: uppercase;
+  font-family: inherit;
+  color: var(--color-decor-rec, #FF0070);
+}
+
+.header__theme-menu {
+  display: grid;
+  justify-content: end;
+  align-items: center;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  color: var(--color-theme-menu, #FF0070);
+}
+
+.header__theme-menu-list::before {
+  content: '';
+  position: absolute;
+  block-size: 9px;
+  inline-size: 9px;
+  top: 9px;
+  right: 9px;
+  border-radius: 100%;
+  background-color: var(--color-decor-rec, #FF0070);
+  box-shadow: 0 0 4px 2px var(--color-decor-rec, #FF0070);
+}
+
+.header__theme-menu-item {
+  block-size: 26px;
+  inline-size: 70px;
+  text-align: center;
+  border: 1px solid transparent;
+}
+
+.header__theme-menu-item:has(:hover) {
+  border: 1px solid var(--accent-color-hover);
+  cursor: pointer;
+}
+
+.header__theme-menu-item:has(:focus-visible) {
+  border: none;
+  border-bottom: 1px solid var(--color-theme-menu, #FF0070);
+}
+
+.header__theme-menu-button {
+  outline: 1px solid transparent;
+}
+
+
+.header__theme-menu-button_active {
+  block-size: 100%;
+  inline-size: 100%;
+  outline: 1px solid var(--color-theme-menu, #FF0070);
+  padding-block-end: 0;
+  padding-block-start: 0;
+  padding-inline-end: 0;
+  padding-inline-start: 0;
+}
+
+.header__logo {
+  display: grid;
+  grid-row: 2;
+  align-items: flex-start;
+  text-shadow: 4px 4px 0 var(--accent-color, #FF0070);
+}
+
+.decorated-logo {
+  color: var(--color-title, #DB00FF);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: bold;
+  line-height: 85%;
+}
+
+.header__text {
+  display: grid;
+  grid-row: 3;
+  align-self: center;
+}
+
+.link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color, #FF0070);
+}
+
+.link:hover {
+  cursor: pointer;
+  border-bottom: 1px solid var(--color-text, #F1B2CE);
+}
+  
+.link:focus-visible {
+  outline: 1px solid var(--color-text, #F1B2CE);
+  outline-offset: 1px;
+}
+
+.decor {
+  background-color: var(--accent-color, #FF0070);
+  color: var(--accent-color-text);
+  font-weight: bold;
+}
+
+.content {
+  padding: 0 clamp(0.625rem, 2.551vw + 0.026rem, 1.25rem) 0;
+}
+
+.content__section {
+  display: grid;
+  gap: 20px;
+  margin-block-start: clamp(3.125rem, 7.653vw + 1.327rem, 5rem);
+}
+
+.content__section:first-child {
+  margin-block-start: 30px;
+}
+
+.content__section:last-child {
+  gap: clamp(0.625rem, 2.551vw + 0.026rem, 1.25rem);
+}
+
+.content__section-title {
+  color: var(--color-selection-title, #FF0070);
+}
+
+.article {
+  display: grid;
+  gap: 10px;
+  align-self: start;
+}
+
+.article .h4 {
+  font-weight: normal;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  gap: clamp(0.625rem, 2.551vw + 0.026rem, 1.25rem);
+}
+
+.gallery__item {
+  display: grid;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+}
+
+.gallery__image {
+  object-fit: contain;
+  background-size: cover;
+  background-position: center;
+  block-size: 100%;
+  max-inline-size: 100%;
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto;
+  align-items: center;
+  justify-items: center;
+  margin-block-start: clamp(3.125rem, 7.653vw + 1.327rem, 5rem);
+  text-shadow: 2px 2px 0 var(--accent-color, #FF0070);
+}
+
+@media (width >= 600px) {
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-template-rows: repeat(3, auto);
+  }
+
+  .gallery__image {
+    object-fit: cover;
+  }
+
+  .gallery__item:nth-child(1) {
+    grid-column: span 2;
+    grid-row: 1;
+  }
+
+  .gallery__item:nth-child(2) {
+    grid-column: 3;
+    grid-row: span 2;
+  }
+
+  .gallery__item:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2 / 4;
+  }
+
+  .gallery__item:nth-child(5) {
+    grid-column: 2 / 4;
+    grid-row: 3;
+  }
+}
+
+@media (width >= 768px) {
+
+  .header .decorated-zone {
+  grid-template-columns: 50%;
+  }
+
+  .header__theme-menu {
+    grid-column: span 2;
+  }
+
+  .header__logo {
+    grid-column: span 2;
+    margin-inline-start: -20px;
+  }
+
+  .decorated-logo {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__text {
+    grid-column: 2;
+  }
+  
+  .content__section:nth-child(odd) {
+    grid-template-columns: 35% 65%;
+    gap: 0;
+    row-gap: 20px;
+  }
+
+  .content__section:nth-child(1) {
+    margin-block-start: 40px;
+  }
+  
+  .content__section:nth-child(1) .content__section-title {
+    grid-template-columns: 90%;
+    grid-row: span 2;
+  }
+
+  .content__section:nth-child(3) .content__section-title {
+    grid-template-columns: 90%;
+    grid-row: span 6;
+  }
+
+  .content__section-title {
+    display: grid;
+    grid-template-columns: 30%;
+    grid-row: span 2;
+  }
+}
+
+@media (width >= 1024px) {
+  .header {
+    min-block-size: 768px;
+  }
+
+  .decorated-zone {
+    min-block-size: 95vh;
+  }
+
+  .header__theme-menu {
+    justify-content: center;
+    align-self: start;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    justify-content: center;
+  }
+  
+  .content__section:nth-child(odd) {
+    grid-template-columns: 34% 66%;
+  }
+  
+  .content__section:nth-child(2) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  
+  .content__section:nth-child(2) .content__section-title {
+    grid-column: span 3;
+  }
+  
+  .content__section:nth-child(3) .content__section-title {
+    grid-template-columns: 100%;
+  }
 }
